# chronocare

./: .env.example  .gitignore  .morning_check.json  260504-handoff.md  260510-handoff.md  260515-handoff.md  260518-handoff.md  260519-handoff.md  260520-handoff.md  260525-handoff.md  260608-handoff.md  260609-handoff-health-report.md  260609-handoff.md  260609-health-report-handoff.md  260611-handoff.md  AGENTS.md  DESIGN.md  DEV_PLAN.md  README.md  STATUS.md  alembic.ini  pyproject.toml  requirements.txt  test_normalize.py  test_ocr.py
alembic/: env.py
alembic/versions/: 00fc2ebcd830_refactor_精简为3核心功能_新增medicalrecord.py  0e22736987d9_init_all_tables.py  0fb40be5fdc6_add_wiki_news_tables_with_fts5.py  457c45a85369_add_report_generations_table.py
app/: main.py
docs/: ChronoCare 开发方案.md  UI-UX 设计方案.md  icon-redesign-prd.md  产品功能设计.md  原始需求.md  测试验收体系.md
docs/archive/env-isolation/: README.md  (+1 more)
docs/产品功能设计/: health-report-prd.md
research/: env-isolation-investigation-2026-06-10.md
scripts/: analyze_tjh_history.py  cleanup_test_pollution.py  download_ct_final.py  fix_encoding.py  hermes_image_generate.py  import_tjh_pdfs.py  vision_ocr.swift
src/chronocare/: config.py  database.py  main.py
tests/: conftest.py  test_normalize.py  test_report.py  test_report_deep.py  test_smoke.py
tests/services/: test_ocr_parser.py
tests/test_services/: test_medical_record.py
vibe-coding-log/: 2026-05-09.md  2026-05-10.md  2026-05-12.md  2026-05-13.md  2026-05-15.md  2026-05-18.md  2026-05-20.md  2026-05-25.md  2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md
(+130 files in other folders)
